--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,13 +2,14 @@ spring:
     application:
         name: colegio-cursos-ms
     r2dbc:
-        url: r2dbc:mysql://mysql-container:3390/courses
-        username: root-auth
+        url: r2dbc:mysql://localhost:3390/courses
+        username: root-courses
         password: 12345
     kafka:
         producer:
-            bootstrap-servers: kafka:9092
+            bootstrap-servers: localhost:9092
         topics:
             welcome: welcome-topic
 server:
     port: 8080
+
