--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
     r2dbc:
         url: r2dbc:mysql://localhost:3390/courses
         username: root-courses
-        password: 12345
+        password: a1s2d3f4g5h6
     kafka:
         producer:
             bootstrap-servers: localhost:9092
