--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,11 +6,11 @@ spring:
         username: root-courses
         password: a1s2d3f4g5h6
     kafka:
-        producer:
-            bootstrap-servers: localhost:9092
+        bootstrap-servers: localhost:9092
         topics:
-            welcome: welcome-topic
+            courses-scheduled: courses-scheduled
             enrollments-created: enrollments.created.v1
+            students-created: students.created.v1
 server:
-    port: 8080
+    port: 8090
 
