feat: add service consumer student and service course add findbyid and mappers coureschedule, etc

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,8 @@ spring:
         username: root-courses
         password: a1s2d3f4g5h6
     kafka:
-        bootstrap-servers: localhost:9092
+        producer:
+            bootstrap-servers: localhost:9092
         topics:
             courses-scheduled: courses-scheduled
             enrollments-created: enrollments.created.v1
