--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 server:
     port: ${PORT:8020}
 spring:
+    profiles:
+        active: dev
     application:
         name: colegio-cursos-ms
     r2dbc:
